# docflux-mkdocs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  testing.yml  version.yml
docs/spec/: architecture.md  fixture-report-2026-02-16.md  open-questions.md  product-spec.md  roadmap.md
src/docflux_mkdocs/: __init__.py  plugin.py
tests/: test_plugin.py
