[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docflux-mkdocs"
version = "0.1.0"
description = "DocFlux MkDocs plugin for DOCX and PDF export"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "DocFlux MkDocs contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation"
]
dependencies = [
  "mkdocs>=1.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9"
]

[project.urls]
Repository = "https://github.com/Meaningful-Data/docflux-mkdocs"
Issues = "https://github.com/Meaningful-Data/docflux-mkdocs/issues"

[project.entry-points."mkdocs.plugins"]
docflux-mkdocs = "docflux_mkdocs.plugin:ExportPlugin"
mkdocs-export = "docflux_mkdocs.plugin:ExportPlugin"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools.packages.find]
where = ["src"]
